UI update march 11

--- a/css/style.css
+++ b/css/style.css
@@ -772,7 +772,7 @@ form label {
 .gtco-cover .display-tc h2 {
   margin: 0;
   padding: 0;
-  color: white;
+  color: rgb(247, 245, 250);
 }
 #gtco-header .display-tc h1,
 .gtco-cover .display-tc h1 {
