--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ h1, h2, h3, h4, h5, h6, figure {
   border-radius: 30px;
 }
 .gtco-nav ul li.btn-cta a:hover span {
-  background: #8bde2f;
+  background: #a01e1e;
   color: #fff;
 }
 .gtco-nav ul li.active > a {
